# TestTaskShopApi

./: .env.example  pyproject.toml  readme.md
app/adapters/: stub_db.py
app/adapters/sqlalchemy_db/: create_tables.py  gateway.py  models.py
app/api/: categories.py  index.py  products.py  root.py
app/application/: categories.py  products.py
app/application/models/: category.py  product.py
app/application/protocols/: database.py
app/main/: di.py
tests/: conftest.py  test_create_category.py  test_create_product.py  test_delete_category.py  test_delete_product.py  test_get_category_by_id.py  test_get_product_by_id.py  test_list_categories.py  test_list_products.py  test_list_products_by_category.py  test_read_categories.py  test_read_category.py  test_read_product.py  test_read_products.py  test_update_category.py  test_update_product.py
